# titleformat-rs

./: .travis.yml  Cargo.lock.msrv  Cargo.toml  README.md
.github/workflows/: rust-coverage.yml  rust-fuzz.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
src/: environment.rs  functions.rs  lib.rs  parser.rs  program.rs  types.rs
src/functions/: mod.rs
src/functions/control/: and.rs  if2.rs  if3.rs  if_.rs  ifequal.rs  ifgreater.rs  iflonger.rs  mod.rs  not.rs  or.rs  select.rs  xor.rs
src/functions/env/: meta.rs
src/functions/num/: add.rs  control.rs  div.rs  max.rs  min.rs  mod.rs  mul.rs  sub.rs
src/functions/str/: case.rs  constants.rs  datetime.rs  format.rs  mod.rs  modify.rs  size.rs
