[package]
name = "titleformat-rs"
version = "0.1.0"
authors = ["Matthew Waters <ystreet00@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ystreet/titleformat-rs"
homepage = "https://github.com/ystreet/titleformat-rs"
keywords = ["foobar2000", "titleformat", "parser"]
categories = ["parser-implementations", "text-processing", "multimedia"]
description = """
A foobar2000 titleformat parser for rust
"""
exclude = [
    ".travis.yml"
]

[dependencies.nom]
version = "4.1"
#features = ["verbose-errors"]

[dependencies.unicode-segmentation]
version = "1.1.0"

[dependencies.iso_8601]
version = "0.4"
package = "iso-8601"

[badges]
travis-ci = { repository = "ystreet/titleformat-rs" }
codecov = { repository = "ystreet/titleformat-rs", service = "github" }
